--- a/Drive/FRDM-K66F-Drive-Controller/mbed_app.json
+++ b/Drive/FRDM-K66F-Drive-Controller/mbed_app.json
@@ -4,7 +4,7 @@
             "platform.stdio-convert-newlines": true,
             "target.network-default-interface-type": "ETHERNET",
             "target.printf_lib": "minimal-printf",
-            "platform.minimal-printf-enable-floating-point": false,
+            "platform.minimal-printf-enable-floating-point": true,
             "platform.minimal-printf-set-floating-point-max-decimals": 6,
             "platform.minimal-printf-enable-64-bit": false
         },
